# obscura

./: .gitignore  README.md  biome.json  fly.toml  package.json  turbo.json
.github/workflows/: fly.yml
apps/api/: Cargo.toml  fly.toml
apps/api/migration/: Cargo.toml
apps/api/migration/src/: m20220101_000001_create_table.rs
apps/api/migrations/: 20250411214218_init.sql
apps/api/src/: config.rs  error.rs  lib.rs  main.rs
apps/api/src/api/: routes.rs  state.rs
apps/api/src/api/handlers/: download.rs  hack.rs  mod.rs  submissions.rs
apps/api/src/assets/: README.md
apps/api/src/db/: mod.rs
apps/api/src/models/: mod.rs  prelude.rs  submission.rs
apps/api/src/services/: generator_service.rs  mod.rs  submission_service.rs
apps/player/: index.ts  package.json  tsconfig.json
apps/web/: env.ts  package.json
apps/web/actions/: create-submission.ts  submit-answer.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/download/[submissionId]/: route.ts
apps/web/app/api/hack/: route.ts
apps/web/app/game/: page.tsx
apps/web/app/game/[submissionId]/: page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/app/types/: submission.ts
apps/web/components/: challenge-form.tsx  final-form.tsx  leaderboard-button.tsx  timer.tsx
apps/web/lib/: schemas.ts
