[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
zip = "2.6.1"
