[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
axum = "0.8.3"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
libsql = "0.9.3"
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zip = "2.6.1"
